--- a/_posts/2020-08-14-data-type.md
+++ b/_posts/2020-08-14-data-type.md
@@ -138,6 +138,12 @@ The NULL value means “no data.” NULL can be written in any lettercase.
 
 记住一句重要的话：null和任何东西运算的结果是null，如果是逻辑运算，结果就是false。
 
+## 空串
+
+人们一般吧字节长度为0的字符串叫做空串，虽然这样表述很没意思，但是有些数据库就是允许空串存在，空串是一种特殊的字符串''。 在大多数数据库内，空串 是不等价于 NULL的。
+
+非空的含义一般是指非null，而非 是指 非空串。
+
 
 
 
